syntax = "proto3";

package Test.Selector;

enum CompareCondition {
    EQ = 0;
    NE = 1;
    GT = 2;
    LT = 3;
    GE = 4;
    LE = 5;
}

enum LogicCondition {
    AND = 0;
    OR = 1;
}

enum Converter {
    Non = 0;
    ToLower = 1;
    ToUpper = 2;
}

message SelectCondition {
    string property_name = 1; // Property name, set empty to compare with parameter
    Converter converter = 2; // Value converter, default value 0 = no converter
    CompareCondition condition = 3; // Compare condition, default value 0 = equal
    string value = 4;
}

message SelectConditionPack {
    bool not = 1; // Flag should be used logic negation
    repeated SelectCondition select_conditions = 2;
    repeated SelectConditionPack select_condition_packs = 3;
    LogicCondition join_condition = 4; // Logic condition, default value 0 = And
}

message SelectLines {
    uint32 from = 1; // Row number, begin from 1; 0 - not setted
    uint32 till = 2; // Row number, begin from 1; 0 - not setted
}

message TestSelectRequestStruct {
    oneof root_select_condition {
        SelectCondition where_simple = 1;
        SelectConditionPack where = 2;
    }
    SelectLines lines = 3;
}
